--- a/index.html
+++ b/index.html
@@ -71,30 +71,20 @@
       </div>
     </div>
   </header>
-          <div class="container">
-            <div class="row">
+  
+  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
+    <a class="nav-link active" href="#">Motivation</a>
+    <a class="nav-link" href="#Languages">Languages</a>
+    <a class="nav-link" href="#Tasks">Subtasks</a>
+    <a class="nav-link" href="#Links">Data Links</a>
+    <a class="nav-link" href="#Participation">How to Participate</a>
+    <a class="nav-link" href="#Dates">Dates</a>
+    <a class="nav-link" href="#Communication">Communication</a>
+    <a class="nav-link" href="#FAQ">FAQs</a>
+    <a class="nav-link" href="#Resources">Resources</a>
+    <a class="nav-link" href="#Organizers">Organizers</a>
 
-                <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
-                  <div class="col-12">
-                  <a class="nav-link active" href="#">Motivation</a>
-                  <a class="nav-link" href="#Languages">Languages</a>
-                  <a class="nav-link" href="#Tasks">Subtasks</a>
-                  <a class="nav-link" href="#Links">Data Links</a>
-                  <a class="nav-link" href="#Participation">How to Participate</a>
-                  </div>
-                  <div class="col-12">
-                  <a class="nav-link" href="#Dates">Dates</a>
-                  <a class="nav-link" href="#Communication">Communication</a>
-                  <a class="nav-link" href="#FAQ">FAQs</a>
-                  <a class="nav-link" href="#Resources">Resources</a>
-                  <a class="nav-link" href="#Organizers">Organizers</a>
-                  </div>
-                </nav>
-              
-            </div>
-          </div>
-
-
+  </nav>
 
   <div class="container-fluid px-5 my-5">
 
@@ -812,7 +802,7 @@
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--center padding-horiz--md">
             <h3>💡 Resources</h3>
-            <ul>
+            <ul class="text--left">
               <li><a href="https://semeval.github.io/faq.html" target="_blank">Frequently Asked Questions about SemEval</a></li>
               <li><a href="https://semeval.github.io/paper-requirements.html" target="_blank">Paper Submission Requirements</a></li>
               <li><a href="https://semeval.github.io/system-paper-template.html" target="_blank">Guidelines for Writing Papers</a></li>
@@ -827,7 +817,7 @@
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Organizers</h3>
-          <ul>
+          <ul class="text--left">
             <li><strong>Dr. Usman Naseem</strong> – Macquarie University (Australia)</li>
             <li><strong>Dr. Seid Muhie Yimam</strong> – University of Hamburg (Germany)</li>
             <li><strong>Robert Geislinger</strong> – University of Hamburg (Germany)</li>
