--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@
         <div id="Resources"class="col col-12" style="margin: 2rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--center padding-horiz--md">
-            <h3>💡 Resources</h3>
-            <ul class="text--left">
+            <h3 class="text--center >💡 Resources</h3>
+            <ul>
               <li><a href="https://semeval.github.io/faq.html" target="_blank">Frequently Asked Questions about SemEval</a></li>
               <li><a href="https://semeval.github.io/paper-requirements.html" target="_blank">Paper Submission Requirements</a></li>
               <li><a href="https://semeval.github.io/system-paper-template.html" target="_blank">Guidelines for Writing Papers</a></li>
@@ -815,9 +815,9 @@
       <!-- Col 10: Organizers Start -->
       <div id="Organizers"class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
-        <div class="text--center padding-horiz--md">
-          <h3>💡 Organizers</h3>
-          <ul class="text--left">
+        <div class="text--left padding-horiz--md">
+          <h3 class="text--center">💡 Organizers</h3>
+          <ul>
             <li><strong>Dr. Usman Naseem</strong> – Macquarie University (Australia)</li>
             <li><strong>Dr. Seid Muhie Yimam</strong> – University of Hamburg (Germany)</li>
             <li><strong>Robert Geislinger</strong> – University of Hamburg (Germany)</li>
