--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 FAQs</h3>
+          <div class="accordion" id="accordionExample">
             <!--14-->
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingFourteen">
@@ -791,6 +792,7 @@
                   Yes! We strongly encourage all teams to submit a paper. Negative results are valuable to the community and will help advance research on polarization.
                 </div>
               </div>
+            </div>
             </div>
 
         </div>
