--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
         <div id="Resources"class="col col-12" style="margin: 2rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--center padding-horiz--md">
-            <h3 class="text--center >💡 Resources</h3>
+            <h3 class="text--center" >💡 Resources</h3>
             <ul>
               <li><a href="https://semeval.github.io/faq.html" target="_blank">Frequently Asked Questions about SemEval</a></li>
               <li><a href="https://semeval.github.io/paper-requirements.html" target="_blank">Paper Submission Requirements</a></li>
