--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
       <div id="Links"class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
-          <h3>💡 Dataset and Download Links</h3>
+          <h3>📂 Dataset and Download Links</h3>
           <p><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data</a></p>
         </div>
       </div>
       <!--Col 4: Data Links End-->
       <!-- Col 5: How to Participate Start -->
-      <div id="Links"class="col col-12" style="margin: 2rem 0rem">
-        <h3>💡 How to Participate</h3>
+      <div id="Participation"class="col col-12" style="margin: 2rem 0rem">
+        <h3>📝 How to Participate</h3>
         <ul>
           <li><strong>Register:</strong> Sign up on the CodaBench competition platform.</li>
           <li><strong>Tasks:</strong> Decide on the task(s) you want to participate in (Subtask 1, 2 and/or 3).</li>
@@ -288,7 +288,7 @@
           <li><strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.</li>
         </ul>
                 
-        <h3>💡 Evaluation</h3>
+        <h3>📈 Evaluation</h3>
         <p>
           <ul>
             <li>Subtask 1: Macro F1</li>
@@ -296,7 +296,7 @@
             <li>Subtask 3: Macro F1</li>
           </ul>
         </p>
-        <h3>💡 Competition Rules and Terms </h3>
+        <h3>⚖️ Competition Rules and Terms </h3>
       <div class="accordion" id="accordionExample">
         <!-- 1 -->
         <div class="accordion-item">
@@ -596,28 +596,28 @@
         </div>
         <!-- Col 6: Important Dates End -->
         <!-- Col 7: Communication Start -->
-        <div id="Links"class="col col-12" style="margin: 2rem 0rem">
+        <div id="Communication"class="col col-12" style="margin: 2rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--center padding-horiz--md">
-            <h3>💡 Communication</h3>
+            <h3>📨 Communication</h3>
             <section class="cta-section container mb-5">
               <div class="row justify-content-center g-4">
                 <div class="col-md-4">
-                  <a href="https://discord.gg/XpJNRXWt" target="_blank class="card text-center text-decoration-none shadow-sm">
+                  <a href="https://discord.gg/XpJNRXWt" target="_blank" ="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
-                      <h3 class="card-title text-primary">📢 Join Discord </h3>
+                      <h3 class="card-title text-primary">📢 Join Discord</h3>
                     </div>
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank class="card text-center text-decoration-none shadow-sm">
+                  <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank" class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
-                      <h3 class="card-title text-success">🚀 Join Google Group</h3>
+                      <h3 class="card-title text-success">🚀 Join  Google Group</h3>
                     </div>
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="polarization-semeval-2026-organisers@googlegroups.com" target="_blank class="card text-center text-decoration-none shadow-sm">
+                  <a href="polarization-semeval-2026-organisers@googlegroups.com.html" target="_blank" class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
                       <h3 class="card-title text-white">📅 Contact Organizers</h3>
                     </div>
@@ -632,7 +632,7 @@
       <div id="FAQ"class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
-          <h3>💡 FAQs</h3>
+          <h3>❓ FAQs</h3>
           <div class="accordion" id="accordionExample">
             <!--14-->
             <div class="accordion-item">
@@ -803,7 +803,7 @@
         <div id="Resources"class="col col-12" style="margin: 2rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--center padding-horiz--md">
-            <h3 class="text--center" >💡 Resources</h3>
+            <h3 class="text--center" >🔗 Resources</h3>
             <ul>
               <li><a href="https://semeval.github.io/faq.html" target="_blank">Frequently Asked Questions about SemEval</a></li>
               <li><a href="https://semeval.github.io/paper-requirements.html" target="_blank">Paper Submission Requirements</a></li>
@@ -818,7 +818,7 @@
       <div id="Organizers"class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--left padding-horiz--md">
-          <h3 class="text--center">💡 Organizers</h3>
+          <h3 class="text--center">🧑‍💼 Organizers</h3>
           <ul>
             <li><strong>Dr. Usman Naseem</strong> – Macquarie University (Australia)</li>
             <li><strong>Dr. Seid Muhie Yimam</strong> – University of Hamburg (Germany)</li>
