--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
               </tr>
             </tbody>
           </table>
-          
+          </div>
         </div>
         <!-- Col 6: Important Dates End -->
         <!-- Col 7: Communication Start -->
@@ -603,29 +603,30 @@
             <section class="cta-section container mb-5">
               <div class="row justify-content-center g-4">
                 <div class="col-md-4">
-                  <a href="https://discord.gg/XpJNRXWt" target="_blank" ="card text-center text-decoration-none shadow-sm">
+                  <a href="https://discord.gg/XpJNRXWt" target="_blank" class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
-                      <h3 class="card-title text-primary">📢 Join Discord</h3>
+                      <h3 class="card-title text-success">🟣💬 Join Discord:</h3>
                     </div>
                   </a>
                 </div>
                 <div class="col-md-4">
                   <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank" class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
-                      <h3 class="card-title text-success">🚀 Join  Google Group</h3>
+                      <h3 class="card-title text-success">📧👥 Join  Google Group</h3>
                     </div>
                   </a>
                 </div>
                 <div class="col-md-4">
                   <a href="polarization-semeval-2026-organisers@googlegroups.com.html" target="_blank" class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
-                      <h3 class="card-title text-white">📅 Contact Organizers</h3>
+                      <h3 class="card-title text-white">📩👥 Contact Organizers</h3>
                     </div>
                   </a>
                 </div>
               </div>
             </section>
           </div>
+        </div>
         </div>
         <!--Col 7: Communication End-->
         <!-- Col 8: FAQ Start -->
