--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
         <!-- Col 9: Resources Start -->
         <div id="Resources"class="col col-12" style="margin: 1rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
-          <div class="text--center padding-horiz--md">
+          <div class="text--left padding-horiz--md">
             <h3 class="text--center" >🔗 Resources</h3>
             <ul>
               <li><a href="https://semeval.github.io/faq.html" target="_blank">Frequently Asked Questions about SemEval</a></li>
