--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
   </header>
   
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
-    <a class="nav-link active" href="#">Motivation</a>
-    <a class="nav-link" href="#Languages">Languages</a>
-    <a class="nav-link" href="#Tasks">Subtasks</a>
-    <a class="nav-link" href="#Links">Data Links</a>
+    <a class="nav-link active" href="#Tasks">Tasks</a>
+    <!-- <a class="nav-link" href="#Languages">Languages</a> -->
+    <!-- <a class="nav-link" href="#Tasks">Subtasks</a> -->
+    <!-- <a class="nav-link" href="#Links">Data Links</a> -->
     <a class="nav-link" href="#Participation">How to Participate</a>
-    <a class="nav-link" href="#Dates">Dates</a>
-    <a class="nav-link" href="#Communication">Communication</a>
     <a class="nav-link" href="#FAQ">FAQs</a>
+    <a class="nav-link" href="#Dates">Dates</a>
     <a class="nav-link" href="#Resources">Resources</a>
+    <a class="nav-link" href="#Communication">Communication</a>
     <a class="nav-link" href="#Organizers">Organizers</a>
 
   </nav>
@@ -520,94 +520,6 @@
       </div>
       </div>
       <!-- Col 5: How to Participate End -->
-      <!-- Col 6: Important Dates Start -->
-      <div id="Dates" class="col col-12" style="margin: 1rem 0rem">
-        <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📅</div> -->
-        <div class="text--center padding-horiz--md">
-          <h3>📅 Important Dates and Task Phases</h3>
-          <p>
-            Keep track of the key milestones for your participation in the Polar task.
-            All deadlines are 11:59 PM AoE (Anywhere on Earth).
-          </p>
-          <table class="table table-bordered table-striped table-hover">
-            <thead>
-              <tr>
-                <th>📌 Event</th>
-                <th>📆 Date</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Sample data ready</td>
-                <td>8 August 2025</td>
-              </tr>
-              <tr>
-                <td>Training data ready</td>
-                <td>10 September 2025</td>
-              </tr>
-              <tr>
-                <td>Evaluation Start</td>
-                <td>10 January 2026</td>
-              </tr>
-              <tr>
-                <td>Evaluation End</td>
-                <td>1 February 2026</td>
-              </tr>
-              <tr>
-                <td>System Paper Submission Deadline</td>
-                <td>February 2026</td>
-              </tr>
-              <tr>
-                <td>Notification of Acceptance</td>
-                <td>March 2026</td>
-              </tr>
-              <tr>
-                <td>Camera-Ready Papers Due</td>
-                <td>April 2026</td>
-              </tr>
-              <tr>
-                <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
-                <td>Summer 2026</td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-        </div>
-        <!-- Col 6: Important Dates End -->
-        <!-- Col 7: Communication Start -->
-        <div id="Communication"class="col col-12" style="margin: 1rem 0rem">
-          <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
-          <div class="text--center padding-horiz--md">
-            <h3>📨 Communication</h3>
-            <section class="cta-section container mb-5">
-              <div class="row justify-content-center g-4">
-                <div class="col-md-4">
-                  <a href="https://discord.gg/XpJNRXWt" target="_blank" class="card text-center text-decoration-none shadow-sm">
-                    <div class="card-body">
-                      <h3 class="card-title text-success">🟣💬 Join Discord:</h3>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-md-4">
-                  <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank" class="card text-center text-decoration-none shadow-sm">
-                    <div class="card-body">
-                      <h3 class="card-title text-success">📧👥 Join  Google Group</h3>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-md-4">
-                  <a href="polarization-semeval-2026-organisers@googlegroups.com.html" target="_blank" class="card text-center text-decoration-none shadow-sm">
-                    <div class="card-body">
-                      <h3 class="card-title text-white">📩👥 Contact Organizers</h3>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
-        </div>
-        <!--Col 7: Communication End-->
         <!-- Col 8: FAQ Start -->
       <div id="FAQ"class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
@@ -778,6 +690,60 @@
         </div>
       </div>
         <!-- Col 8: FAQ End -->
+         <!-- Col 6: Important Dates Start -->
+      <div id="Dates" class="col col-12" style="margin: 1rem 0rem">
+        <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📅</div> -->
+        <div class="text--center padding-horiz--md">
+          <h3>📅 Important Dates and Task Phases</h3>
+          <p>
+            Keep track of the key milestones for your participation in the Polar task.
+            All deadlines are 11:59 PM AoE (Anywhere on Earth).
+          </p>
+          <table class="table table-bordered table-striped table-hover">
+            <thead>
+              <tr>
+                <th>📌 Event</th>
+                <th>📆 Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Sample data ready</td>
+                <td>8 August 2025</td>
+              </tr>
+              <tr>
+                <td>Training data ready</td>
+                <td>10 September 2025</td>
+              </tr>
+              <tr>
+                <td>Evaluation Start</td>
+                <td>10 January 2026</td>
+              </tr>
+              <tr>
+                <td>Evaluation End</td>
+                <td>1 February 2026</td>
+              </tr>
+              <tr>
+                <td>System Paper Submission Deadline</td>
+                <td>February 2026</td>
+              </tr>
+              <tr>
+                <td>Notification of Acceptance</td>
+                <td>March 2026</td>
+              </tr>
+              <tr>
+                <td>Camera-Ready Papers Due</td>
+                <td>April 2026</td>
+              </tr>
+              <tr>
+                <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
+                <td>Summer 2026</td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+        </div>
+        <!-- Col 6: Important Dates End -->
 
         <!-- Col 9: Resources Start -->
         <div id="Resources"class="col col-12" style="margin: 1rem 0rem">
@@ -793,7 +759,40 @@
           </div>
         </div>
         <!-- Col 9: Resources End -->
-
+         <!-- Col 7: Communication Start -->
+        <div id="Communication"class="col col-12" style="margin: 1rem 0rem">
+          <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
+          <div class="text--center padding-horiz--md">
+            <h3>📨 Communication</h3>
+            <section class="cta-section container mb-5">
+              <div class="row justify-content-center g-4">
+                <div class="col-md-4">
+                  <a href="https://discord.gg/XpJNRXWt" target="_blank" class="card text-center text-decoration-none shadow-sm">
+                    <div class="card-body">
+                      <h3 class="card-title text-success">🟣💬 Join Discord:</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-md-4">
+                  <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank" class="card text-center text-decoration-none shadow-sm">
+                    <div class="card-body">
+                      <h3 class="card-title text-success">📧👥 Join  Google Group</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-md-4">
+                  <a href="polarization-semeval-2026-organisers@googlegroups.com.html" target="_blank" class="card text-center text-decoration-none shadow-sm">
+                    <div class="card-body">
+                      <h3 class="card-title text-white">📩👥 Contact Organizers</h3>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+        </div>
+        <!--Col 7: Communication End-->
       <!-- Col 10: Organizers Start -->
       <div id="Organizers"class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
