--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <div class="container" style="margin-top: -1rem">
 
   <div class="row">
-
+      <div id="Tasks"></div>
       <!--col 1: Motivation Start -->
-      <div id="Motivation"class="col col-12" style="margin: 1rem 0rem">
+      <div class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Motivation</h3>
@@ -82,7 +82,7 @@
       </div>
     <!-- Col 1: Motivation End -->
     <!-- Col 2: Languages Start -->
-      <div id="Languages" class="col col-12" style="margin: 1rem 0rem">
+      <div id="" class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">🌐</div> -->
         <div class="text--center padding-horiz--md">
           <h3>🌐 Languages</h3>
@@ -91,7 +91,7 @@
       </div>
     <!-- Col 2: Languages End -->
     <!-- Col 3: Tasks Start -->
-      <div id="Tasks" class="col col-12" style="margin: 1rem 0rem">
+      <div id="" class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📝</div> -->
         <div class="text--center padding-horiz--md">
           <h3>📝 Subtasks</h3>
@@ -247,8 +247,9 @@
         </div>
       </div>
       <!-- Col 3: Tasks End -->
+       
       <!-- Col 4: Data Links Start -->
-      <div id="Links"class="col col-12" style="margin: 1rem 0rem">
+      <div id=""class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>📂 Dataset and Download Links</h3>
@@ -256,8 +257,9 @@
         </div>
       </div>
       <!--Col 4: Data Links End-->
+      <div id="Participation"></div>
       <!-- Col 5: How to Participate Start -->
-      <div id="Participation"class="col col-12" style="margin: 1rem 0rem">
+      <div id="" class="col col-12" style="margin: 1rem 0rem">
         <h3>📝 How to Participate</h3>
         <ul>
           <li><strong>Register:</strong> Sign up on the CodaBench competition platform.</li>
@@ -520,8 +522,9 @@
       </div>
       </div>
       <!-- Col 5: How to Participate End -->
-        <!-- Col 8: FAQ Start -->
-      <div id="FAQ"class="col col-12" style="margin: 1rem 0rem">
+      <div id="FAQ"></div>
+      <!-- Col 8: FAQ Start -->
+      <div id="" class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>❓ FAQs</h3>
@@ -690,8 +693,9 @@
         </div>
       </div>
         <!-- Col 8: FAQ End -->
-         <!-- Col 6: Important Dates Start -->
-      <div id="Dates" class="col col-12" style="margin: 1rem 0rem">
+      <div id="Dates"></div>
+      <!-- Col 6: Important Dates Start -->
+      <div id="" class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📅</div> -->
         <div class="text--center padding-horiz--md">
           <h3>📅 Important Dates and Task Phases</h3>
@@ -744,9 +748,9 @@
           </div>
         </div>
         <!-- Col 6: Important Dates End -->
-
+        <div id="Resources"></div>
         <!-- Col 9: Resources Start -->
-        <div id="Resources"class="col col-12" style="margin: 1rem 0rem">
+        <div id=""class="col col-12" style="margin: 1rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--left padding-horiz--md">
             <h3 class="text--center" >🔗 Resources</h3>
@@ -759,8 +763,9 @@
           </div>
         </div>
         <!-- Col 9: Resources End -->
-         <!-- Col 7: Communication Start -->
-        <div id="Communication"class="col col-12" style="margin: 1rem 0rem">
+        <div id="Communication"></div>
+        <!-- Col 7: Communication Start -->
+        <div id=""class="col col-12" style="margin: 1rem 0rem">
           <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
           <div class="text--center padding-horiz--md">
             <h3>📨 Communication</h3>
@@ -793,8 +798,9 @@
         </div>
         </div>
         <!--Col 7: Communication End-->
+      <div id="Organizers"></div>
       <!-- Col 10: Organizers Start -->
-      <div id="Organizers"class="col col-12" style="margin: 1rem 0rem">
+      <div id=""class="col col-12" style="margin: 1rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--left padding-horiz--md">
           <h3 class="text--center">🧑‍💼 Organizers</h3>
