--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
 
-  <button id="backToTop" title="Go to top">⬆️</button>
+  <!-- <button id="backToTop" title="Go to top">⬆️</button> -->
 
   <header class="hero-section">
     <div class="overlay">
@@ -68,6 +68,9 @@
   <div class="container-fluid px-5 my-5">
 
 <section class="polar-info-section">
+
+<div class="padding-horiz--md"></div>
+
 <div class="container" style="margin-top: -1rem">
 
   <div class="row">
