--- a/index.html
+++ b/index.html
@@ -9,27 +9,20 @@
   <link rel="stylesheet" href="assets/style.css" />
 
   <style>
-    #backToTop {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      z-index: 999;
-      background-color: #8a6cc3; /* purple button */
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      font-size: 24px;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      transition: background-color 0.3s ease, transform 0.2s ease;
+    .hero-section {
+      position: relative;
+      min-height: 100vh; /* full height */
+      background: url('your-background.jpg') no-repeat center center/cover;
     }
-    
-    #backToTop:hover {
-      background-color: #5a32a3;
-      transform: translateY(-2px);
+
+    .hero-section .overlay {
+      background: rgba(255, 255, 255, 0.8); /* adjust opacity */
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
     }
+
   </style>
 
 </head>
@@ -38,18 +31,25 @@
 
   <!-- <button id="backToTop" title="Go to top">⬆️</button> -->
 
-  <header class="hero-section">
-    <div class="overlay">
-      <div class="container text-center  hero-text">
-        <h1 class="display-6 fw-bold" style="color: #542b76;">
-            Polar@SemEval-2026  <br>Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
-        </h1>
-        <p class="lead" style="color: #724d9d;">
-          Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
-        </p>
+  <header class="hero-section d-flex align-items-center text-center">
+    <div class="overlay w-100">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10 col-md-12">
+            <h1 class="fw-bold text-primary mb-3 fs-2 fs-md-1" style="color: #542b76;">
+              Polar@SemEval-2026  
+              <br class="d-none d-md-block">
+              Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
+            </h1>
+            <p class="lead fs-6 fs-md-5" style="color: #724d9d;">
+              Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </header>
+  
   
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
     <a class="nav-link active" href="#Tasks">Tasks</a>
