--- a/index.html
+++ b/index.html
@@ -31,25 +31,18 @@
 
   <!-- <button id="backToTop" title="Go to top">⬆️</button> -->
 
-  <header class="hero-section d-flex align-items-center text-center">
-    <div class="overlay w-100">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-10 col-md-12">
-            <h1 class="fw-bold text-primary mb-3 fs-2 fs-md-1" style="color: #542b76;">
-              Polar@SemEval-2026  
-              <br class="d-none d-md-block">
-              Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
-            </h1>
-            <p class="lead fs-6 fs-md-5" style="color: #724d9d;">
-              Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
-            </p>
-          </div>
-        </div>
+  <header class="hero-section">
+    <div class="overlay">
+      <div class="container text-center  hero-text">
+        <h1 class="display-6 fw-bold" style="color: #542b76;">
+            Polar@SemEval-2026  <br>Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
+        </h1>
+        <p class="lead" style="color: #724d9d;">
+          Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
+        </p>
       </div>
     </div>
   </header>
-  
   
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
     <a class="nav-link active" href="#Tasks">Tasks</a>
