--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
   <style>
 .hero-section {
   position: relative;
-  background: #f8d7e5; /* your pink color */
-  background-size: cover;      /* makes background responsive */
-  background-position: center; /* keeps focus on center */
-  background-repeat: no-repeat;
-  width: 100%;
-  padding: 80px 20px;          /* spacing that shrinks on phones */
+       /* spacing that shrinks on phones */
 }
 
 @media (max-width: 768px) {
