--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   <style>
 .hero-section {
-  position: relative;
-       /* spacing that shrinks on phones */
+
+  width: 100%;
+  padding: 80px 20px;          /* spacing that shrinks on phones */
 }
 
 @media (max-width: 768px) {
