--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                   </a>
                 </div>
                 <div class="col-md-4">
-                  <a href="polarization-semeval-2026-organisers@googlegroups.com" target="_blank" class="card text-center text-decoration-none shadow-sm">
+                  <a href="https://groups.google.com/g/polarization-semeval-2026-organisers" target="_blank" class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
                       <h3 class="card-title text-white">📩👥 Contact Organizers</h3>
                     </div>
