--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    .navbar .nav-link.active {
+      color: #007bff !important;
+      font-weight: bold;
+      text-decoration: underline;
+}
+
+  </style>
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="80" tabindex="0">
 
 
   <!-- <button id="backToTop" title="Go to top">⬆️</button> -->
@@ -817,95 +825,6 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const nav = document.querySelector('.navbar');
-    if (!nav) return;
-  
-    // All in-page nav links
-    const links = Array.from(nav.querySelectorAll('a[href^="#"]'));
-  
-    // Remove any hard-coded "active" (e.g., on Motivation)
-    links.forEach(a => a.classList.remove('active'));
-  
-    // Map links -> sections (by id)
-    const entries = links.map(link => {
-      const id = decodeURIComponent(link.getAttribute('href').slice(1));
-      const el = document.getElementById(id) || document.querySelector(`[name="${id}"]`);
-      return el ? { id, link, el } : null;
-    }).filter(Boolean);
-  
-    // Helper to set active
-    function setActive(id) {
-      links.forEach(a => a.classList.toggle('active', a.getAttribute('href') === '#' + id));
-    }
-  
-    // Immediate feedback on click (before scroll settles)
-    links.forEach(a => {
-      a.addEventListener('click', () => {
-        const id = decodeURIComponent(a.getAttribute('href').slice(1));
-        setActive(id);
-      });
-    });
-  
-    // Handle fixed/sticky navbar height (if any)
-    const headerH = (nav.position === 'fixed' || getComputedStyle(nav).position === 'fixed')
-      ? nav.offsetHeight
-      : 0;
-  
-    // Use IntersectionObserver where available
-    if ('IntersectionObserver' in window) {
-      const io = new IntersectionObserver((obsEntries) => {
-        // Pick the most visible section among intersecting ones
-        let topCandidate = null;
-        obsEntries.forEach(e => {
-          if (!e.isIntersecting) return;
-          if (!topCandidate || e.intersectionRatio > topCandidate.intersectionRatio) {
-            topCandidate = e;
-          }
-        });
-        if (topCandidate) {
-          setActive(topCandidate.target.id);
-          // Optional: keep URL hash in sync without jumping
-          history.replaceState(null, '', '#' + topCandidate.target.id);
-        }
-      }, {
-        root: null,
-        // Offset the top so a section counts as "active" after it clears the navbar
-        rootMargin: `-${headerH + 8}px 0px -60% 0px`,
-        // Fire when at least part is visible; we’ll pick the highest ratio
-        threshold: Array.from({length: 11}, (_, i) => i / 10)
-      });
-  
-      entries.forEach(({ el }) => io.observe(el));
-  
-    } else {
-      // Fallback for very old browsers
-      function onScroll() {
-        let currentId = entries[0]?.id;
-        const viewportTop = headerH + 8;
-  
-        entries.forEach(({ id, el }) => {
-          const rect = el.getBoundingClientRect();
-          if (rect.top <= viewportTop && rect.bottom > viewportTop) {
-            currentId = id;
-          }
-        });
-        if (currentId) setActive(currentId);
-      }
-      window.addEventListener('scroll', onScroll, { passive: true });
-      onScroll();
-    }
-  
-    // On load, respect current hash if it matches a known section
-    const initial = decodeURIComponent(location.hash.slice(1));
-    if (initial && entries.some(e => e.id === initial)) {
-      setActive(initial);
-    } else if (entries[0]) {
-      setActive(entries[0].id);
-    }
-  });
-  </script>
 
   </body>
 </html>
