--- a/index.html
+++ b/index.html
@@ -791,20 +791,21 @@
         <div class="text--left padding-horiz--md">
           <h3 class="text--center">🧑‍💼 Organizers</h3>
           <ul>
-            <li><strong>Dr. Usman Naseem</strong> – Macquarie University (Australia)</li>
-            <li><strong>Dr. Seid Muhie Yimam</strong> – University of Hamburg (Germany)</li>
-            <li><strong>Robert Geislinger</strong> – University of Hamburg (Germany)</li>
-            <li><strong>Dr. Shamsuddeen Hassan Muhammad</strong> – Imperial College London (UK)</li>
-            <li><strong>Dr. Sarah Kohail</strong> – Zayed University (United Arab Emirates)</li>
-            <li><strong>Juan Ren</strong> – Macquarie University (Australia)</li>
-            <li><strong>Rudy Alexandro Garrido Veliz</strong> – University of Hamburg (Germany)</li>
-            <li><strong>Saba Anwar</strong> – University of Hamburg (Germany)</li>
-            <li><strong>Dr. Ibrahim Said Ahmad</strong> – Bayero University Kano (Nigeria) & Northeastern University (USA)</li>
-            <li><strong>Dr. Idris Abdulmumin</strong> – University of Pretoria (South Africa)</li>
-            <li><strong>Dr. Abinew Ali Ayele</strong> – Bahir Dar University (Ethiopia)</li>
-            <li><strong>Prof. Adem Chanie Ali</strong> – Bahir Dar University (Ethiopia) & University of Hamburg (Germany)</li>
-            <li><strong>Dr. Martin Semmann</strong> – University of Hamburg (Germany)</li>
-            <li><strong>Prof. Dr. Chris Biemann</strong> – University of Hamburg (Germany)</li>
+            <li><a href="https://usmaann.github.io/" target="_blank"><strong>Dr. Usman Naseem</strong></a> – Macquarie University (Australia)</li>
+            <li><a href="https://seyyaw.github.io/" target="_blank"><strong>Dr. Seid Muhie Yimam</strong></a> – University of Hamburg (Germany)</li>
+            <li><a href="https://github.com/Alienmaster" target="_blank"><strong>Robert Geislinger</strong></a> – University of Hamburg (Germany)</li>
+            <li><a href="https://github.com/shmuhammadd" target="_blank"><strong>Dr. Shamsuddeen Hassan Muhammad</strong></a> – Imperial College London (UK)</li>
+            <li><a href="https://github.com/snkohail" target="_blank"><strong>Dr. Sarah Kohail</strong></a> – Zayed University (United Arab Emirates)</li>
+            <li><a href="" target="_blank"><strong>Juan Ren</strong></a> – Macquarie University (Australia)</li>
+            <li><a href="https://de.linkedin.com/in/rudy-garrido/es" target="_blank"><strong>Rudy Alexandro Garrido Veliz</strong></a> – University of Hamburg (Germany)</li>
+            <li><a href="https://cryocultures.org/person/anwar-saba/" target="_blank"><strong>Saba Anwar</strong></a> – University of Hamburg (Germany)</li>
+            <li><a href="http://isahmadbbr.github.io/" target="_blank"><strong>Dr. Ibrahim Said Ahmad</strong></a> – Bayero University Kano (Nigeria) & Northeastern University (USA)</li>
+            <li><a href="https://abumafrim.github.io/" target="_blank"><strong>Dr. Idris Abdulmumin</strong></a> – University of Pretoria (South Africa)</li>
+            <li><a href="" target="_blank"><strong>Dr. Abinew Ali Ayele</strong></a> – Bahir Dar University (Ethiopia)</li>
+            <li><a href="https://scholar.google.com/citations?user=9jTEx8MAAAAJ&hl=en" target="_blank"><strong>Prof. Adem Chanie Ali</strong></a> – Bahir Dar University (Ethiopia) & University of Hamburg (Germany)</li>
+            <li><a href="https://scholar.google.com/citations?user=p8UoPNcAAAAJ&hl=en" target="_blank"><strong>Dr. Martin Semmann</strong></a> – University of Hamburg (Germany)</li>
+            <li><a href="https://scholar.google.com/citations?user=BdwP-3QAAAAJ&hl=en" target="_blank"><strong>Prof. Dr. Chris Biemann</strong></a> – University of Hamburg (Germany)</li>
+            
           </ul>          
         </div>
       </div>
