--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
 
 <footer class="footer-section">
   <div class="footer-container text-center">
-    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
+    <img src="assets/POLAR.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
     <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
     <p>Made with ❤️ by the POLAR Team</p>
   </div>
